# crewai_generator

./: README.md  pyproject.toml
src/crewai_generator/: crew.py  main.py
src/crewai_generator/config/: agents.yaml  tasks.yaml
